package jp.co.interprism.training.DDD3.jr.pricing.domain.fare.discount.group.member;

import lombok.AllArgsConstructor;
import lombok.Getter;

@Getter
@AllArgsConstructor
public class ChildrenCount {
    private final MembersCount membersCount;
}
