@startuml
skinparam linetype ortho
'left to right direction


package fare {

    package unit {
        interface FareUnit

        class FareYen implements FareUnit
        class FareRate
        class FareCount
    }


    package basic {
        class BasicFare
        class BasicFareYen implements FareUnit

        interface BasicFareFactory <<Factory>>
    }

    package surcharge.superexpress {
        interface SuperExpressSurcharge
        class SuperExpressSurchargeYen implements FareUnit
        interface SuperExpressSurchargeFactory <<Factory>>
        enum SuperExpressName

        package seat {
            enum Seat

            package reserved {
                class SuperExpressSurchargeReservedSeat implements SuperExpressSurcharge
                class AdditionalCharge
            }

            package free {
                class SuperExpressSurchargeFreeSeat implements SuperExpressSurcharge
            }
        }
    }

    package total {
        interface TotalFare


        interface Discount

        package ordinary {

            package one.way {
                class OneWayFare implements TotalFare
                class OneWayFareFactory
                package child {
                    enum Age
                    class ChildFare implements TotalFare
                    class ChildDiscount implements Discount
                }
            }
            package round.trip {
                class RoundTripFare implements TotalFare
                class RoundTripDiscount implements Discount
            }
        }

        package group {
            class GroupFare implements TotalFare
            class GroupDiscount implements Discount
            class Group
            package member {
                class MembersCount
                class AdultsCount
                class ChildrenCount
            }
        }



    }


}


package boarding {
    package section {
        class BoardingSection
    
        enum Station
        class OperatingKilometer
    }

    package date {
        class BoardingDate
        enum Season
    }
}


BasicFareYen --o BasicFare
SuperExpressSurchargeYen --o SuperExpressSurcharge

BasicFareYen <|--- total
SuperExpressSurchargeYen <|--- total


BasicFare <- BasicFareFactory
SuperExpressSurcharge <- SuperExpressSurchargeFactory
SuperExpressSurchargeReservedSeat o-- AdditionalCharge

ChildFare o-- ChildDiscount
RoundTripFare o-- RoundTripDiscount
GroupFare o-- GroupDiscount



/'レイアウト'/

Station -[hidden] OperatingKilometer

SuperExpressSurcharge -[hidden]- seat
Seat -[hidden]- reserved
free -[hidden] reserved

basic -[hidden] surcharge.superexpress


/' レイアウト終 '/


enum Station {
    - operationKilometer
}

class BoardingSection {
    + calculateOperatingKilometer()
}

class BoardingDate {
    + getSeason()
}

interface FareUnit {
    + plus(fareYen)
    + minus(fareYen)
    + times(fareReta)
    + times(fareCount)
}


class FareYen {
    - value
}

class FareRate {
    - value
}


class BasicFareYen {
    - fareYen
}

class BasicFare {
    + getBasicFare()
}

class SuperExpressSurchargeYen {
    - fareYen
}

interface SuperExpressSurcharge {
    + calculateSuperExpressSurchargeYen()
}



enum SuperExpressName {
    + hasAdditionalCharge()
}





interface TotalFare {
    + getBasicFare()
    + getSuperExpressSurcharge()
    + {default} sumFareYen()
}

class OneWayFare {
    - basicFareYen
    - superExpressSurchargeYen
}

class OneWayFareFactory {
    - basicFareFactory
    - superExpressSurchargeFactory
}

class ChildFare {
    - oneWayFare
}


interface SuperExpressSurcharge {

}





interface Discount {
    + isAvailable()
    + discountBasicFareYen()
    + discountSuperExpressSurchargeYen()
}


class RoundTripDiscount {
    - oneWayOperatingKilometer
}


class GroupDiscount {
    - group
    - BoardingDate
}

class Group {
    - adultsCount
    - childrenCount
}

class AdultsCount {
    - membersCount
}

class ChildrenCount {
    - membersCount
}

class MembersCount {
    - FareCount
}

@enduml